--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,6 +7,12 @@ phases:
   build:
     commands:
       - npm run build  # Builds the project
+  post_build:
+    commands:
+      - aws s3 sync build/ s3://618992-frontend-s3 --delete
+      - aws cloudfront create-invalidation \
+          --distribution-id EBXXZ5UWZBFRF \
+          --paths "/*"
 artifacts:
   files:
     - '**/*'
