Invalidation to buildspec.yml to trigger CloudFront to clear cache

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -10,9 +10,7 @@ phases:
   post_build:
     commands:
       - aws s3 sync build/ s3://618992-frontend-s3 --delete
-      - aws cloudfront create-invalidation \
-          --distribution-id EBXXZ5UWZBFRF \
-          --paths "/*"
+      - aws cloudfront create-invalidation --distribution-id EBXXZ5UWZBFRF --paths "/*"
 artifacts:
   files:
     - '**/*'
