--- a/buildspec.yml
+++ b/buildspec.yml
@@ -9,8 +9,8 @@ phases:
       - npm run build  # Builds the project
   post_build:
     commands:
-      - aws s3 sync build/ s3://618992-frontend-s3 --delete
-      - aws cloudfront create-invalidation --distribution-id EBXXZ5UWZBFRF --paths "/*"
+      - aws s3 sync build/ s3://$S3_BUCKET_NAME --delete
+      - aws cloudfront create-invalidation --distribution-id $CLOUDFRONT_ID --paths "/*"
 artifacts:
   files:
     - '**/*'
